src/objects/Int_Facility_Party__c.object
<CustomObject>
    <description>Int Facility Party</description>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facility Name</description>
        <label>Facility Name</label>
        <referenceTo>Int_Facility__c</referenceTo>
        <relationshipLabel>Int Facility Parties</relationshipLabel>
        <relationshipName>Int_Facility_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Number__c</fullName>
        <description>Facility Number</description>
        <label>Facility Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Source_System__c</fullName>
        <description>Facility Source System</description>
        <label>Facility Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party Name</description>
        <label>Party Name</label>
        <referenceTo>Int_Party__c</referenceTo>
        <relationshipLabel>Int Facility Parties</relationshipLabel>
        <relationshipName>Int_Facility_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <description>Party Number</description>
        <label>Party Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Role_Type_Code__c</fullName>
        <description>Party Role Type Code</description>
        <label>Party Role Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Source_System__c</fullName>
        <description>Party Source System</description>
        <label>Party Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Int Facility Party</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FPI-{0000000000}</displayFormat>
        <label>Facility Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Facility Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>